--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -14,6 +14,9 @@ body{
     background:linear-gradient(45deg,#0a0a0a,#3e4c61);
 }
 
+.container{
+    box-shadow: 0px 0px 10px white;
+}
 
 .calculator{
     width: 320px;
@@ -21,9 +24,8 @@ body{
     padding: 24px;
     margin: 10px;
     background:transparent;
-    box-shadow: 0px 0px 10px white;
-}
 
+}
 
 input{
     width: 280px;
@@ -42,6 +44,7 @@ input{
 
 input::placeholder{
     color: #ffffff;
+    appearance: none;
 }
 
 button{
